--- a/theme/assets/css/screen.css
+++ b/theme/assets/css/screen.css
@@ -977,27 +977,10 @@ body.nav-opened .nav {
 .post {
     position: relative;
     width: 95%;
-    margin: 4rem auto;
-    padding-bottom: 4rem;
-    border-bottom: #EBF2F6 1px solid;
+    margin: 6rem auto;
+    padding-left: 2rem;
+    border-left: #EBF2F6 5px solid;
     word-wrap: break-word;
-}
-
-/* Add a little circle in the middle of the border-bottom on our .post
-   just for the lolz and stylepoints. */
-.post:after {
-    display: block;
-    content: "";
-    width: 7px;
-    height: 7px;
-    border: #E7EEF2 1px solid;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    margin-left: -5px;
-    background: #FFF;
-    border-radius: 100%;
-    box-shadow: #FFF 0 0 0 5px;
 }
 
 body:not(.post-template) .post-title,
@@ -1053,9 +1036,6 @@ body:not(.page-template) .post-title {
 
 .post-date {
     display: inline-block;
-    margin-left: 8px;
-    padding-left: 12px;
-    border-left: #d5dbde 1px solid;
     text-transform: uppercase;
     font-size: 1.3rem;
     white-space: nowrap;
@@ -1098,6 +1078,10 @@ body:not(.page-template) .post-title {
     line-height: 1.5em;
 }
 
+.end-content-hr {
+    width: 95%;
+    margin: 6rem auto;
+}
 
 /* ==========================================================================
    5. Single Post - When you click on an individual post
@@ -1553,8 +1537,7 @@ body:not(.page-template) .post-title {
 /* The main wrapper for our pagination links */
 .pagination {
     position: relative;
-    width: 80%;
-    max-width: 710px;
+    width: 95%;
     margin: 4rem auto;
     font-family: "Open Sans", sans-serif;
     font-size: 1.3rem;
