--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -9,7 +9,7 @@
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {{/if}}
     </nav>
-    <div class="vertical">
+    <div>
         <div class="main-header-content inner">
             <h1 class="page-title">{{@blog.title}}</h1>
             <a href="https://github.com/attilathedud"> 
