--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -2,17 +2,13 @@
 {{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
 
 {{!-- The big featured header --}}
-<header class="main-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav overlay clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
-    <div>
-        <div class="main-header-content inner">
-            <h1 class="page-title">{{@blog.title}}</h1>
-        </div>
+<header class="main-header no-cover">
+    <div class="main-header-content inner">
+        <h1 class="page-title">{{@blog.title}}</h1>
+         <a class="icon-popout github-popout" href="https://github.com/attilathedud"></a>
+         <a class="icon-popout rss-popout" href="http://attilathedud.me/rss"></a>
+        {{!-- The blog navigation links --}}
+        {{navigation}}
     </div>
 </header>
 
