--- a/theme/post.hbs
+++ b/theme/post.hbs
@@ -6,13 +6,14 @@
 {{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
+<header class="main-header no-cover">
+    <div class="main-header-content inner">
+        <h1 class="page-title">{{@blog.title}}</h1>
+         <a class="icon-popout github-popout" href="https://github.com/attilathedud"></a>
+         <a class="icon-popout rss-popout" href="http://attilathedud.me/rss"></a>
+        {{!-- The blog navigation links --}}
+        {{navigation}}
+    </div>
 </header>
 
 <main class="content" role="main">
