--- a/theme/tag.hbs
+++ b/theme/tag.hbs
@@ -1,28 +1,15 @@
 {{!< default}}
 {{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
-
-{{!-- If we have a tag cover, display that - else blog cover - else nothing --}}
-<header class="main-header tag-head {{#if tag.image}}" style="background-image: url({{tag.image}}){{else}}{{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}{{/if}}">
-    <nav class="main-nav overlay clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
-    <div class="vertical">
-        {{#tag}}
-        <div class="main-header-content inner">
-            <h1 class="page-title">{{name}}</h1>
-            <h2 class="page-description">
-                {{#if description}}
-                    {{description}}
-                {{else}}
-                    A {{../pagination.total}}-post collection
-                {{/if}}
-            </h2>
-        </div>
-        {{/tag}}
+<header class="main-header no-cover">
+    {{#tag}}
+    <div class="main-header-content inner">
+        <h1 class="page-title">{{name}}</h1>
+         <a class="icon-popout github-popout" href="https://github.com/attilathedud"></a>
+         <a class="icon-popout rss-popout" href="http://attilathedud.me/rss"></a>
+        {{!-- The blog navigation links --}}
+        {{navigation}}
     </div>
+    {{/tag}}
 </header>
 
 {{!-- The main content area on the homepage --}}
