--- a/theme/author.hbs
+++ b/theme/author.hbs
@@ -9,7 +9,7 @@
         <div class="main-header-content inner">
             <h1 class="page-title">{{@blog.title}}</h1>
             <a class="icon-popout github-popout" href="https://github.com/attilathedud"></a>
-            <a class="icon-popout rss-popout" href="http://attilathedud.me/rss"></a>
+            <a class="icon-popout rss-popout" href="{{@blog.url}}/rss/"></a>
             {{!-- The blog navigation links --}}
             {{navigation}}
         </div>
