--- a/theme/tag.hbs
+++ b/theme/tag.hbs
@@ -5,7 +5,7 @@
     <div class="main-header-content inner">
         <h1 class="page-title">{{name}}</h1>
          <a class="icon-popout github-popout" href="https://github.com/attilathedud"></a>
-         <a class="icon-popout rss-popout" href="http://attilathedud.me/rss"></a>
+         <a class="icon-popout rss-popout" href="{{@blog.url}}/rss/"></a>
         {{!-- The blog navigation links --}}
         {{navigation}}
     </div>
