--- a/theme/error.hbs
+++ b/theme/error.hbs
@@ -1,5 +1,4 @@
 {{!< default}}
-{{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
 
 <header class="main-header no-cover">
     <div class="main-header-content inner">
@@ -12,9 +11,16 @@
 </header>
 
 {{!-- The main content area on the homepage --}}
-<main id="content" class="content" role="main">
-
-    {{!-- The tag below includes the post loop - partials/loop.hbs --}}
-    {{> "loop"}}
+<main class="content" role="main">
+    <div class="error-404">
+        <h1>4</h1>
+        <h1>0</h1>
+        <h1>4</h1>
+        <h1>0</h1>
+        <h1>4</h1>
+        <h1>0</h1>
+    </div>
 
 </main>
+
+<script type="text/javascript" src="{{asset "js/404.js"}}"></script>
