--- a/theme/assets/css/screen.css
+++ b/theme/assets/css/screen.css
@@ -579,6 +579,10 @@ button {
     box-shadow: 0px -1px 10px gainsboro;
 }
 
+.error-404 h1 {
+    text-align: center;
+}
+
 /* Put a semi-opaque radial gradient behind the icon to make it more visible
    on photos which happen to have a light background. */
 .home-template .main-header:after {
