Adding commenting to posts

--- a/theme/assets/css/screen.css
+++ b/theme/assets/css/screen.css
@@ -154,6 +154,10 @@ body {
     text-rendering: geometricPrecision;
 }
 
+#disqus_thread {
+    margin: 10px;
+}
+
 ::-moz-selection {
     background: #D6EDFF;
 }
