--- a/theme/post.hbs
+++ b/theme/post.hbs
@@ -31,6 +31,22 @@
         </section>
 
     </article>
+
+    <div id="disqus_thread"></div>
+    <script>
+        var disqus_config = function () {
+            this.page.url = '{{url absolute="true"}}'; 
+            this.page.identifier = 'ghost-{{id}}'; 
+        };
+        
+        (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = '//attilathedud.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </main>
 
 {{/post}}
