--- a/theme/assets/css/screen.css
+++ b/theme/assets/css/screen.css
@@ -143,7 +143,6 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
@@ -577,6 +576,7 @@ button {
     text-decoration: none;
     color: rgba(0,0,0,.8);
     padding: 20px;
+    font-family: 'Share Tech Mono', monospace;
 }
 
 .new-nav li a:hover {
