--- a/theme/default.hbs
+++ b/theme/default.hbs
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="{{asset "/favicon.ico"}}">
 
     {{!-- Styles'n'Scripts --}}
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Share+Tech+Mono|Open+Sans:700,400" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
 
