--- a/theme/assets/css/screen.css
+++ b/theme/assets/css/screen.css
@@ -10,14 +10,10 @@
     3.  Utilities
     4.  General
     5.  Single Post
-    6.  Author Profile
-    7.  Read More
-    8.  Third Party Elements
-    9.  Pagination
-    11. Footer
-    12. Media Queries (Tablet)
-    13. Media Queries (Mobile)
-    14. Animations
+    6.  Third Party Elements
+    7.  Pagination
+    8.  Footer
+    9.  Media Queries
 
 */
 
@@ -771,7 +767,7 @@ body:not(.page-template) .post-title {
 }
 
 /* ==========================================================================
-   8. Third Party Elements - Embeds from other services
+   6. Third Party Elements - Embeds from other services
    ========================================================================== */
 
 /* Github */
@@ -794,7 +790,7 @@ body:not(.page-template) .post-title {
 
 
 /* ==========================================================================
-   9. Pagination - Tools to let you flick between pages
+   7. Pagination - Tools to let you flick between pages
    ========================================================================== */
 
 /* The main wrapper for our pagination links */
@@ -880,7 +876,7 @@ body:not(.page-template) .post-title {
 
 
 /* ==========================================================================
-   11. Footer - The bottom of every page
+   8. Footer - The bottom of every page
    ========================================================================== */
 
 .site-footer {
@@ -910,18 +906,35 @@ body:not(.page-template) .post-title {
     text-align: center;
 }
 
+/* ==========================================================================
+   9. Media Queries - Smaller than 1060px
+   ========================================================================== */
 
-@media only screen and (max-width:1100px) {
+@media only screen and (max-width:1060px) {
     .new-nav {
-        display: none;
+        font-size: medium;
     }
 }
 
 /* ==========================================================================
-   12. Media Queries - Smaller than 900px
+   9. Media Queries - Smaller than 960px
+   ========================================================================== */
+
+@media only screen and (max-width:960px) {
+    .new-nav {
+        font-size: small;
+    }
+}
+
+/* ==========================================================================
+   9. Media Queries - Smaller than 900px
    ========================================================================== */
 
 @media only screen and (max-width: 900px) {
+
+    .new-nav {
+        display: none;
+    }
 
     blockquote {
         margin-left: 0;
@@ -931,7 +944,6 @@ body:not(.page-template) .post-title {
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
-        padding: 4% 0;
     }
 
     .home-template .main-header:after { display: none; }
@@ -991,7 +1003,7 @@ body:not(.page-template) .post-title {
 
 
 /* ==========================================================================
-   13. Media Queries - Smaller than 500px
+   9. Media Queries - Smaller than 500px
    ========================================================================== */
 
 @media only screen and (max-width: 500px) {
@@ -1003,13 +1015,15 @@ body:not(.page-template) .post-title {
     .paged .main-header {
         max-height: 20vh;
         min-height: 160px;
-        padding: 4% 0;
     }
 
     .inner,
     .pagination {
         width: auto;
-        margin: 2rem auto;
+    }
+
+    .icon-popout {
+        margin-top: 1rem;
     }
 
     .post {
@@ -1047,6 +1061,7 @@ body:not(.page-template) .post-title {
 
     .page-title {
         font-size: 3rem;
+        margin-left: 10px;
     }
 
     .post-excerpt p {
