--- a/theme/error.hbs
+++ b/theme/error.hbs
@@ -12,15 +12,18 @@
 
 {{!-- The main content area on the homepage --}}
 <main class="content" role="main">
-    <div class="error-404">
-        <h1>4</h1>
-        <h1>0</h1>
-        <h1>4</h1>
-        <h1>0</h1>
-        <h1>4</h1>
-        <h1>0</h1>
-    </div>
-
+    <article class="post">
+        <section class="post-content">
+            <div class="error-404">
+                <h1>4040404040404040404040404040404040404</h1>
+                <h1>0404040404040404040404040404040404040</h1>
+                <h1>4040404040404040404040404040404040404</h1>
+                <h1>0404040404040404040404040404040404040</h1>
+                <h1>4040404040404040404040404040404040404</h1>
+                <h1>0404040404040404040404040404040404040</h1>
+            </div>
+        </section>
+    </article>
 </main>
 
 <script type="text/javascript" src="{{asset "js/404.js"}}"></script>
