--- a/theme/page.hbs
+++ b/theme/page.hbs
@@ -6,7 +6,7 @@
 {{!-- Everything inside the #post tags pulls data from the page --}}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
+<header class="main-header post-head no-cover">
 
 </header>
 
