--- a/theme/default.hbs
+++ b/theme/default.hbs
@@ -29,6 +29,9 @@
 
         {{!-- The tiny footer at the very bottom --}}
         <footer class="site-footer clearfix">
+            <div class="loading-centered">
+                <div class="loading"></div>
+            </div>
             <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
         </footer>
 
