Moving css stuff to sass, some css cleanup

--- a/theme/error.hbs
+++ b/theme/error.hbs
@@ -11,8 +11,12 @@
 </header>
 
 {{!-- The main content area on the homepage --}}
-<main class="content" role="main">
+<main class="content post-template" role="main">
     <article class="post">
+        <header class="post-header">
+
+        </header>
+
         <section class="post-content">
             <div class="error-404">
                 <h1>4040404040404040404040404040404040404</h1>
