--- a/theme/partials/navigation.hbs
+++ b/theme/partials/navigation.hbs
@@ -1,7 +1,7 @@
-<div class="new-nav">
+<div class="nav-bar">
     <ul>
         {{#foreach navigation}}
-            <li class="new-nav{{#if current}} nav-current{{/if}}">
+            <li class="nav-bar{{#if current}} nav-current{{/if}}">
                 <a href="{{url absolute="true"}}">{{label}}</a>
             </li>
         {{/foreach}}
