--- a/theme/default.hbs
+++ b/theme/default.hbs
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{!-- Styles'n'Scripts --}}
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.min.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Share+Tech+Mono|Open+Sans:700,400" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
 
