Adding pagination for users who disable javascript

--- a/theme/partials/loop.hbs
+++ b/theme/partials/loop.hbs
@@ -12,3 +12,9 @@
     </footer>
 </article>
 {{/foreach}}
+
+<noscript>
+    <div class="loading-centered">
+        {{pagination}}
+    </div>
+</noscript>
