Adding mobile menu

--- a/theme/assets/scss/media/_media_500.scss
+++ b/theme/assets/scss/media/_media_500.scss
@@ -3,6 +3,12 @@
         margin-bottom: 15px;
     }
 
+    .nav-bar-mobile {
+        .icon {
+            margin-top: 1rem;
+        }
+    }
+
     .paged .main-header {
         max-height: 20vh;
     }
