--- a/theme/assets/scss/_navigation.scss
+++ b/theme/assets/scss/_navigation.scss
@@ -1,13 +1,8 @@
 @import 'colors';
 
-.nav-bar {
+.nav-bar, .nav-bar-mobile {
     ul {
         list-style: none;
-        padding-top: 2.5rem !important;
-        font-size: larger;
-        float: right;
-        padding-left: 6rem;
-        margin: 0 !important;
     }
 
     li {
@@ -16,12 +11,55 @@
         a {
             text-decoration: none;
             color: $navbar-link-color;
-            padding: 20px;
             font-family: 'Share Tech Mono', monospace;
+        }
+    }
+}
+
+.nav-bar {
+    ul {
+        padding-top: 2.5rem !important;
+        font-size: larger;
+        float: right;
+        padding-left: 6rem;
+        margin: 0 !important;
+    }
+
+    li {
+        a {
+            padding: 20px;
 
             &:hover {
                 box-shadow: 0px -1px 10px $navbar-hover-color;
             }
+        }
+    }
+}
+
+.nav-bar-mobile {
+    display: none;
+    color: $navbar-link-color;
+    font-size: xx-large;
+    cursor: pointer;
+    user-select: none;
+
+    .icon {
+        position: fixed;
+        top: 0;
+        right: 0;
+        margin-top: 1.5rem;
+        margin-right: 5px;
+    }
+
+    ul {
+        display: none;
+    }
+
+    li {
+        a {
+            font-size: large;
+            padding: 0 20px;
+            margin: 0 5px;
         }
     }
 }
