--- a/theme/assets/scss/media/_media_900.scss
+++ b/theme/assets/scss/media/_media_900.scss
@@ -3,6 +3,14 @@
         display: none;
     }
 
+    .nav-bar-mobile {
+        display: block;
+    }
+
+    .icon-popout {
+        margin-top: 1.5rem;
+    }
+
     blockquote {
         margin-left: 0;
     }
@@ -11,6 +19,7 @@
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
+        overflow: initial;
     }
 
     .home-template .main-header:after { display: none; }
