--- a/theme/error.hbs
+++ b/theme/error.hbs
@@ -30,4 +30,4 @@
     </article>
 </main>
 
-<script type="text/javascript" src="{{asset "js/404.js"}}"></script>
+<script type="text/javascript" src="{{asset "js/404.min.js"}}"></script>
