--- a/theme/default.hbs
+++ b/theme/default.hbs
@@ -12,7 +12,6 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Share+Tech+Mono|Open+Sans:700,400" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}" />
@@ -44,9 +43,8 @@
         var max_pages = parseInt('{{pagination.pages}}');
     </script>
 
-    {{!-- The main JavaScript file for Casper --}}
     <script type="text/javascript" src="{{asset "js/jquery-3.2.1.min.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/index.min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
 
 </body>
