Adding link to informmapper

--- a/theme/assets/scss/_theme.scss
+++ b/theme/assets/scss/_theme.scss
@@ -127,3 +127,7 @@ body:not(.page-template) .post-title {
 .rss-popout {
     background: url('../imgs/tdd.png');
 }
+
+.inform-popout {
+    background: url('../imgs/informmapper.png');
+}
