--- a/theme/assets/scss/_general.scss
+++ b/theme/assets/scss/_general.scss
@@ -200,6 +200,7 @@ pre {
 .kg-image-card figcaption,
 .kg-gallery-card figcaption {
     margin: -1.0em 0 1.5em;
+    text-align: center;
 }
 
 .kg-embed-card {
